--- a/b5bedc2360a9a8c59f00fccd1fe47344.css
+++ b/b5bedc2360a9a8c59f00fccd1fe47344.css
@@ -1,25 +1,1 @@
-/* body {
-  background-color: #d4d4d4;
-} */
-.owner_name {
-  color: #3a3a3a;
-  font-weight: bold;
-  margin-top: 18px;
-}
-a {
-  color:skyblue;
-}
-
-button{
-  font-weight: bold;
-  text-decoration: none;
-  background: skyblue;
-  color:white;
-  border-radius: 20px;
-  font-family: 'Avenir','Arial';
-}
-
-h2 {
-color: #6594e0;
-border-bottom: dashed 2px #6594e0;
-}
+a{color:skyblue}h2{color:#6594e0;border-bottom:2px dashed #6594e0}.owner_name{color:#3a3a3a;font-weight:700;margin-top:18px}.user_image{width:100px;margin-top:30px}#submit{font-weight:700;text-decoration:none;background:skyblue;color:#fff;border-radius:20px;font-family:Avenir,Arial}#container{display:column}
