--- a/style.css
+++ b/style.css
@@ -19,14 +19,21 @@ h2 {
 }
 
 #submit {
+  width: 100%;
+  height: 30px;
+  /* font-size: 1.3em; */
   font-weight: bold;
   text-decoration: none;
   background: skyblue;
   color:white;
-  border-radius: 20px;
+  border-radius: 10px;
   font-family: 'Avenir','Arial';
 }
-
+#textForm {
+  width: 100%;
+  height: 30px;
+  font-size: 1.5em;
+}
 #container{
   display: column;
 }
