--- a/10a63be27d3d2fb11ff7e253a6c046f1.css
+++ b/10a63be27d3d2fb11ff7e253a6c046f1.css
@@ -1,44 +1,1 @@
-a {
-  color:skyblue;
-}
-
-h2 {
-  color: #6594e0;
-  border-bottom: dashed 2px #6594e0;
-}
-
-.owner_name {
-  color: #3a3a3a;
-  font-weight: bold;
-  margin-top: 18px;
-}
-
-.user_image {
-  width: 100px;
-  margin-top: 30px;
-}
-
-#submit {
-  width: 100%;
-  height: 30px;
-  /* font-size: 1.3em; */
-  font-weight: bold;
-  text-decoration: none;
-  background: skyblue;
-  color:white;
-  border-radius: 10px;
-  font-family: 'Avenir','Arial';
-}
-#textForm {
-  width: 100%;
-  height: 30px;
-  font-size: 1.5em;
-}
-
-.user_cell {
-  display: flex;
-}
-.user_info {
-  margin-left: 15px;
-  margin-top: 20px;
-}
+a{color:skyblue}h2{color:#6594e0;border-bottom:2px dashed #6594e0}.owner_name{color:#3a3a3a;font-weight:700;margin-top:18px}.user_image{width:100px;margin-top:30px}#submit{font-weight:700;text-decoration:none;background:skyblue;color:#fff;border-radius:10px;font-family:Avenir,Arial}#submit,#textForm{width:100%;height:30px}#textForm{font-size:1.5em}.user_cell{display:flex}.user_info{margin-left:15px;margin-top:20px}
