change line layout

--- a/style.css
+++ b/style.css
@@ -38,7 +38,12 @@ h2 {
 .user_cell {
   display: flex;
 }
+
 .user_info {
   margin-left: 15px;
   margin-top: 20px;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
